--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@
   background-color: #2c3e50;
   color: white;
 }
+
+.pv-header{
+  min-height: 300px;
+  background-color: #1abc9c;
+  color: white;
+}
+
+.pv-header-img{
+  min-height: 120px;
+  padding-top: 30px;
+}
