--- a/style.css
+++ b/style.css
@@ -70,3 +70,15 @@
 .btn-default{
   margin-top: 50px;
 }
+
+.row.footer-top{
+  min-height: 120px;
+  background-color: #2c3e50;
+  color: white;
+}
+
+.row.footer{
+  background-color: #1a252f;
+  min-height: 60px;
+  color: white;
+}
