--- a/style.css
+++ b/style.css
@@ -1,84 +1,21 @@
-.debug {
-  background-color: rgb(247, 217, 162);
+.pv-padding-80{
+  padding: 80px 0;
 }
 
-.pv-row-80{
-  width: 80%;
-  margin: 0 auto;
+.pv-padding-30{
+  padding: 30px 0;
 }
 
-.row.pv-nav{ 
-  min-height: 50px;
+.text-uppercase{
+  text-transform: uppercase;
+}
+
+.pv-header-top{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 999;
   background-color: #2c3e50;
-  color: white;
-}
-
-.pv-header{
-  min-height: 300px;
-  background-color: #1abc9c;
-  color: white;
-}
-
-.pv-header-img{
-  min-height: 120px;
-  padding-top: 30px;
-}
-
-.row.pv-portfolio{
-  max-height: 1200px;
-}
-
-.pv-portfolio-img{
-  border-radius: 5px;
-  margin: 5px auto;
-  min-height: 120px;
-}
-
-.violet{
-  background-color: #ba4c63
-}
-.acqua{
-  background-color: #1fa4b6;
-}
-.black{
-  background-color: black;
-}
-.azure{
-  background-color: #1d83c1;
-}
-.blue{
-  background-color: #1037b5;
-}
-.pink{
-  background-color: pink;
-}
-
-.row.pv-about{
-  background-color: #1abc9c;
-  min-height: 340px;
-  color: white;
-}
-
-.row.pv-about .col-xs-12.col-sm-6{
-  margin-top: 20px;
-}
-
-.row.contact{
-  min-height: 250px;
-}
-
-.btn-default{
-  margin-top: 50px;
-}
-
-.row.footer-top{
-  min-height: 120px;
-  background-color: #2c3e50;
-  color: white;
-}
-
-.row.footer{
-  background-color: #1a252f;
-  min-height: 60px;
   color: white;
 }
