--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   padding: 30px 0;
 }
 
+.pv-wrapper-50{
+  width: 50%;
+  margin: 0 auto;
+}
+
 .text-uppercase{
   text-transform: uppercase;
 }
@@ -16,6 +21,10 @@
 
 .pv-fs-30{
   font-size: 30px;
+}
+
+.pv-fs-20{
+  font-size: 20px;
 }
 
 .pv-header-top{
@@ -67,6 +76,17 @@
   margin: 0 auto;
 }
 
+.btn{
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 10px 15px;
+}
+
 #portfolio {
   color: #2c3e50;
+}
+
+#about{
+  background-color: #1abc9c;
+  color: white;
 }
