--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Comune */
 .pv-padding-80{
   padding: 80px 0;
 }
@@ -31,10 +32,25 @@
   font-size: 20px;
 }
 
+.pv-fs-18{
+  font-size: 18px;
+}
+
+/* header */
 .pv-hamb{
   border: 1px solid white;
   border-radius: 10%;
   padding: 5px;
+}
+
+.pv-ul-hidden{
+  list-style: none;
+}
+
+.pv-ul-hidden li{
+  display: inline;
+  line-height: 80px;
+  padding-left: 15px;
 }
 
 .pv-header-top{
@@ -75,6 +91,8 @@
   display: inline-block;
 }
 
+/* main */
+/* portfolio */
 .pv-box{
   width: 100%;
   height: 250px;
@@ -86,10 +104,26 @@
   margin: 0 auto;
 }
 
+#portfolio {
+  color: #2c3e50;
+}
+
+/* About */
+#about{
+  background-color: #1abc9c;
+  color: white;
+}
+
+
+/* Contact */
 .pv-form{
   width: 100%;
   border: none;
   border-bottom: 1px solid lightgray;
+}
+
+#contact {
+  color: #2c3e50;
 }
 
 /* footer */
@@ -127,19 +161,6 @@ footer{
   background-color: #1abc9c;
   color: white;
   padding: 10px 20px;
-}
-
-#portfolio {
-  color: #2c3e50;
-}
-
-#about{
-  background-color: #1abc9c;
-  color: white;
-}
-
-#contact {
-  color: #2c3e50;
 }
 
 
